yaml/deploy/rabbit/ampq/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-ampq-nginx
  namespace: message-queue
spec:
  selector:
    matchLabels:
      app: rabbit-ampq-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit-ampq-nginx
    spec:
      containers:
      - name: rabbit-ampq-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf-rabbit-ampq
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: nginx-conf-rabbit-ampq
        configMap:
          name: nginx-conf-rabbit-ampq
          items:
            - key: nginx.conf
              path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-ampq-service
  namespace: message-queue
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: rabbit-ampq-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: message-queue
  name: rabbit-ampq-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
   - hosts:
      - rabbit-ampq.congcu24h.com #domain
     secretName:  test-domain-tls
  rules:
  - host: rabbit-ampq.congcu24h.com #domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbit-ampq-service
            port:
              number: 8080
